🎨 Полный визуальный редизайн (HEX, градиенты, GUI, эффекты) без изменения механик
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>